--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,9 @@ dependencies {
         exclude group: 'glide-parent'
     }
 
+    //shimmer
+    implementation 'com.facebook.shimmer:shimmer:0.4.0'
+
     //view model
     implementation "androidx.lifecycle:lifecycle-extensions:2.1.0"
     implementation "androidx.lifecycle:lifecycle-reactivestreams:2.1.0"
